Version 0.4.3+
	* Add coordinate-descent based LASSO

Version 0.4.3 2012-09-19 by luispedro
	* Add select_n_best & rank_corr to featureselection
	* Add Euclidean MDS
	* Add tree multi-class strategy
	* Fix adaboost with boolean weak learners (issue #6, reported by audy
	(Austin Richardson))
	* Add ``axis`` arguments to zscore()

Version 0.4.2 2012-01-16 by luispedro
	* Make defaultlearner able to take extra argumentsaudy (Austin Richardson)
	* Make ctransforms_model a supervised_model (adds apply_many)
	* Add expanded argument to defaultlearner
	* Fix corner case in SDA
	* Fix repeated_kmeans
	* Fix parallel gridminimise on Windows
	* Add multi_label argument to normaliselabels
	* Add multi_label argument to nfoldcrossvalidation.foldgenerator
	* Do not fork a process in gridminimise if nprocs == 1 (makes for easier
	debugging, at the cost of slightly more complex code).
	* Add milk.supervised.multi_label
	* Fix ext.jugparallel when features is a Task
	* Add milk.measures.bayesian_significance

Version 0.4.1 2011-08-25 by luispedro
	* Fix important bug in multi-process gridsearch

Version 0.4.0 2011-08-24 by luispedro
	* Use multiprocessing to take advantage of multi core machines (off by
	default).
	* Add perceptron learner
	* Set random seed in random forest learner
	* Add warning to milk/__init__.py if import fails
	* Add return value to ``gridminimise``
	* Set random seed in ``precluster_learner``
	* Implemented Error-Correcting Output Codes for reduction of multi-class
	to binary (including probability estimation)
	* Add ``multi_strategy`` argument to ``defaultlearner()``
	* Make the dot kernel in svm much, much, faster
	* Make sigmoidal fitting for SVM probability estimates faster
	* Fix bug in randomforest (patch by Wei on milk-users mailing list)

Version 0.3.10 2011-05-10 by luispedro
	* Add ext.jugparallel
	* parallel nfold crossvalidation using jug
	* parallel multiple kmeans runs using jug
	* cluster_agreement for non-ndarrays