@@ -1,5 +1,6 @@
 Version 0.4.3+
 	* Add coordinate-descent based LASSO
+	* Add unsupervised.center function
 
 Version 0.4.3 2012-09-19 by luispedro
 	* Add select_n_best & rank_corr to featureselection
